--- a/app/views/budgets/edit.html.erb
+++ b/app/views/budgets/edit.html.erb
@@ -5,7 +5,7 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
           <li class="breadcrumb-item"> <%= link_to 'Budgets', budgets_path  %> </li>
-          <li class="breadcrumb-item"> <%= link_to "Budget - #{@budget.id}", @budget  %> </li>
+          <li class="breadcrumb-item"> <%= "Budget - #{@budget.id}"  %> </li>
           <li class="breadcrumb-item active" aria-current="edit budget page">Edit</li>
         </ol>
       </nav>
