--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -5,7 +5,7 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
           <li class="breadcrumb-item"> <%= link_to 'Expenses', expenses_path  %> </li>
-          <li class="breadcrumb-item"> <%= link_to "Expense - #{@expense.id}", @expense  %> </li>
+          <li class="breadcrumb-item"> <%= "Expense - #{@expense.id}" %> </li>
           <li class="breadcrumb-item active" aria-current="edit expense page">Edit</li>
         </ol>
       </nav>
