--- a/app/views/incomes/edit.html.erb
+++ b/app/views/incomes/edit.html.erb
@@ -5,7 +5,7 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
           <li class="breadcrumb-item"> <%= link_to 'Incomes', incomes_path  %> </li>
-          <li class="breadcrumb-item"> <%= link_to "Income - #{@income.id}", @income  %> </li>
+          <li class="breadcrumb-item"> <%= "Income - #{@income.id}" %> </li>
           <li class="breadcrumb-item active" aria-current="edit income page">Edit</li>
         </ol>
       </nav>
