--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -30,7 +30,7 @@
     <% @expenses.each do |expense| %>
       <tr>
         <td><%= expense.category %></td>
-        <td> <span> &#8358; </span> <%= expense.amount %></td>
+        <td><%= in_currency(expense.amount) %></td>
         <td><%= expense.date.strftime("%e %B, %Y") %></td>
         <td class="incomes--actions-field">
           <% if expense.image.present? %>
