resolve rubocop errors

--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -16,10 +16,10 @@
 <table class="table table-bordered">
   <thead class="thead-light">
     <tr>
-      <th scope="col">Start date</th>
-      <th scope="col">End date</th>
-      <th scope="col">Income estimate</th>
-      <th scope="col">Expense estimate</th>
+      <th scope="col">Start Date</th>
+      <th scope="col">End Date</th>
+      <th scope="col">Estimate Income</th>
+      <th scope="col">Estimate Expense</th>
       <th colspan="3" class="incomes--actions-field">Actions</th>
     </tr>
   </thead>
