--- a/app/assets/stylesheets/incomes.scss
+++ b/app/assets/stylesheets/incomes.scss
@@ -61,10 +61,15 @@
 }
 
 .table {
-  td {
+  td, th {
     font-size: $global-font * 0.8;
     line-height: $global-font * 2;
     padding-top: ($global-padding * 0.3);
     padding-bottom: ($global-padding * 0.3);
+  }
+
+  th {
+    padding-top: ($global-padding * 0.1);
+    padding-bottom: ($global-padding * 0.1);
   }
 }
