--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the Documents controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+@import "shared/colors";
+@import "shared/variables";
+
+.documents--upload--file-type-info {
+  font-size: $global-font * 0.7;
+  color: $gray-1;
+  margin-top: $global-margin * 0.5;
+  margin-bottom: $global-margin * 2;
+}
+
+.documents--upload--name-div {
+  margin-bottom: $global-margin;
+}
