--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Documents#index</h1>
-<p>Find me in app/views/documents/index.html.erb</p>
+<div class="row">
+  <div class="col col-md-9">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
+        <li class="breadcrumb-item active" aria-current="expenses list page"> Documents </li>
+      </ol>
+    </nav>
+  </div>
+
+  <div class="col col-md-3">
+    <button class="incomes--new-income-link btn btn-success modal-pop--trigger"> New Document </button>
+    <%= modal(options: { modal_title: 'New Document' }, html_options: { class: "modal-display" }) do %>
+      <%= render 'form', document: @document %>
+    <% end %>
+  </div>
+</div>
