--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -26,7 +26,7 @@
 
       <div class="row justify-content-md-center">
         <div class="col-sm-10 file-input">
-          <%= f.file_field :file, accept: '.jpg, .jpeg, .gif, .png, .svg' %>
+          <%= f.file_field :file, accept: '.jpg, .jpeg, .gif, .png, .svg, .pdf' %>
           <span class='button'>Add receipt <em>(optional)</em></span>
           <% if expense.file.present? %>
             <span class='label' data-js-label> <%= cl_image_tag(expense.file, options = { class: 'incomes--image-span' }) %> </span>
