update documents view

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -15,3 +15,9 @@
     <% end %>
   </div>
 </div>
+
+<hr>
+
+<div class="documents">
+  <%= render 'documents_folder', documents: @documents %>
+</div>
