--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -1,6 +1,10 @@
 @import "shared/colors";
 @import "shared/variables";
 
+.documents {
+  margin-top: $global-margin * 2;
+}
+
 .documents--upload--file-type-info {
   font-size: $global-font * 0.7;
   color: $gray-1;
@@ -10,4 +14,16 @@
 
 .documents--upload--name-div {
   margin-bottom: $global-margin;
+}
+
+.documents--file--link {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.documents--file--name {
+  color: $gray-1;
+  display: block;
+  font-size: $global-font * 0.7;
 }
