add chart analysis on dashboard

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -19,3 +19,6 @@
     font-family: 'Rouge Script', cursive; 
   }
 }
+
+.dashboard--chart-divider { margin: ($global-margin * 3) 0; }
+.dashboard--chart-section { padding: 0 $global-padding * 2; }
