--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col col-md-9">
+  <div class="col-1"></div>
+  <div class="col col-md-8">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
