--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -225,3 +225,43 @@
 }
 
 .pdf--iframe { width: 100%; height: 100%; }
+
+
+.digg_pagination {
+  background: $white;
+  cursor: default;
+}
+
+.digg_pagination a, .digg_pagination span, .digg_pagination em {
+  padding: ($global-padding * 0.1) ($global-padding * 0.7);
+  display: block;
+  float: left;
+  border: 1px solid $gray-2;
+  line-height: $global-font * 1.5;
+}
+
+.digg_pagination .disabled {
+  color: $silver-1;
+  border: 1px solid $gray-2;
+}
+
+.digg_pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background: $green-2;
+  color: $white;
+  border: 1px solid $green-2;
+}
+
+.digg_pagination a {
+  text-decoration: none;
+  color: $green-3;
+  border: 1px solid $gray-2;
+  font-size: $global-font * 0.85;
+}
+
+.digg_pagination a:hover, .digg_pagination a:focus {
+  color: $white;
+  background: $green-1;
+  border-color: $green-1;
+}
