--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col col-md-9">
+  <div class="col col-md-8 offset-1">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
