--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col col-md-9">
+  <div class="col col-md-8 offset-1">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
@@ -13,51 +13,59 @@
   </div>
 </div>
 
-<table class="table table-bordered">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">Category</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Date</th>
-      <th scope="col">Payslip</th>
-      <th colspan="2" class="incomes--actions-field"> Actions </th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col col-md-11 offset-1">
+    <table class="table table-bordered">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">Category</th>
+          <th scope="col">Amount</th>
+          <th scope="col">Date</th>
+          <th scope="col">Payslip</th>
+          <th colspan="2" class="incomes--actions-field"> Actions </th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @incomes.each do |income| %>
-      <tr>
-        <td><%= income.category %></td>
-        <td><%= in_currency(income.amount) %></td>
-        <td><%= income.date.strftime("%e %B, %Y") %></td>
-        <td class="incomes--actions-field">
-          <% if income.file.present? %>
-            <button class="btn modal-pop--trigger">
-              <%= image_icon('view', 'side-bar--menu-icon') %>
-            </button>
-            <%= modal(options: { modal_title: "Income - #{income.id} (Payslip)" }, html_options: { class: "modal-display" }) do %>
-              <%= file_viewer(options: { url: income.file } ) %>
-            <% end %>
-          <% end %>
-        </td>
-        <td class="incomes--actions-field">
-          <%= link_to(edit_income_path(income)) do %>
-            <%= image_icon('edit', 'side-bar--menu-icon') %>
-          <% end %>
-        </td>
-        <td class="incomes--actions-field">
-          <button class="btn modal-pop--trigger">
-            <%= image_icon('delete', 'side-bar--menu-icon') %>
-          </button>
-          <%= modal(options: { modal_title: "Delete Income - #{income.id}" }, html_options: { class: "modal-display" }) do %>
-            <%= "Are you sure you want to delete Income (#{income.category} - #{income.id})?" %>
-            <hr>
-            <div class="float-right">
-              <%= link_to 'Delete', income, method: :delete, class: 'btn btn-danger modal-display--action-button' %>
-            </div>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @incomes.each do |income| %>
+          <tr>
+            <td><%= income.category %></td>
+            <td><%= in_currency(income.amount) %></td>
+            <td><%= income.date.strftime("%e %B, %Y") %></td>
+            <td class="incomes--actions-field">
+              <% if income.file.present? %>
+                <button class="btn modal-pop--trigger">
+                  <%= image_icon('view', 'side-bar--menu-icon') %>
+                </button>
+                <%= modal(options: { modal_title: "Income - #{income.id} (Payslip)" }, html_options: { class: "modal-display" }) do %>
+                  <%= file_viewer(options: { url: income.file } ) %>
+                <% end %>
+              <% end %>
+            </td>
+            <td class="incomes--actions-field">
+              <%= link_to(edit_income_path(income)) do %>
+                <%= image_icon('edit', 'side-bar--menu-icon') %>
+              <% end %>
+            </td>
+            <td class="incomes--actions-field">
+              <button class="btn modal-pop--trigger">
+                <%= image_icon('delete', 'side-bar--menu-icon') %>
+              </button>
+              <%= modal(options: { modal_title: "Delete Income - #{income.id}" }, html_options: { class: "modal-display" }) do %>
+                <%= "Are you sure you want to delete Income (#{income.category} - #{income.id})?" %>
+                <hr>
+                <div class="float-right">
+                  <%= link_to 'Delete', income, method: :delete, class: 'btn btn-danger modal-display--action-button' %>
+                </div>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <div class="digg_pagination text-center">
+      <%= will_paginate @incomes, previous_label: 'Prev', inner_window: 1, outer_window: 0  %>
+    </div>
+  </div>
+</div>
