resolve rubocop errors

--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="jumbotron">
+<div class="row">
+  <div class="col col-md-11 offset-1 jumbotron">
     <h1>Sorry!</h1>
     <h4> <em> There is an internal server error. Please try again in some minutes </em></h4>
   </div>
