--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="jumbotron">
+<div class="row">
+  <div class="col col-md-11 offset-1 jumbotron">
     <h1>Sorry!</h1>
     <h4> <em> The page you're looking for does not exist or has been removed </em></h4>
   </div>
