generate reports for income ands expenses

--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -25,6 +25,7 @@
   -ms-flex-direction: column;
   flex-direction: column;
   width: 50%;
+  min-height: 70%;
   margin: auto;
   margin-top: $global-margin * 10;
   pointer-events: auto;
