--- a/app/assets/stylesheets/incomes.scss
+++ b/app/assets/stylesheets/incomes.scss
@@ -4,6 +4,7 @@
 .incomes--new-income-link {
   float: right;
   background-color: $green-2;
+  margin-left: $global-margin;
 }
 
 .file-input {
@@ -63,8 +64,8 @@
   td, th {
     font-size: $global-font * 0.8;
     line-height: $global-font * 3.2;
-    padding-top: ($global-padding * 0.35);
-    padding-bottom: ($global-padding * 0.35);
+    padding-top: ($global-padding * 0.15);
+    padding-bottom: ($global-padding * 0.15);
   }
 
   th {
