--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -230,6 +230,7 @@
 .digg_pagination {
   background: $white;
   cursor: default;
+  margin-bottom: $global-margin * 3;
 }
 
 .digg_pagination a, .digg_pagination span, .digg_pagination em {
